# NeuroEvolution

./: README.md  benchmark.py  gemini.py  layer_classes.py  main.py  make_moons.py  pyproject.toml  requirements.txt  test.py
NeuroEvolution/: CNNoptimizer.py  __init__.py  layer_classes.py  optimizer.py
NeuroEvolution.egg-info/: PKG-INFO  SOURCES.txt
experiments/tests_classification/: MNIST_Adam.py  benchmark.py  benchmarks_image.py  make_moons.py  test.py
experiments/tests_regression/: benchmarks.py  test.py
neuroevo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
