[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroevo"
version = "0.1.0"
description = "Neuro-evolution and model optimization toolkit"
authors = [{ name="Romain" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "mealpy",
    "gymnasium"
]

[tool.setuptools.packages.find]
include = ["NeuroEvolution*"]